# apl

./: CMakeLists.txt  README.md  apl copy.cpp  apl.cpp  conanfile.py  iterators.hpp  tangible_main_main.cpp  views.hpp
APL/: Exec.cpp  Exec.h  Indexer.cpp  Indexer.h  Main.cpp  Main.h  Scope.cpp  Scope.h  SimpleIndexer.cpp  SimpleIndexer.h  Sys.cpp  Sys.h  Type.cpp  Type.h
APL/errors/: APLError.cpp  APLError.h  DomainError.cpp  DomainError.h  ImplementationError.cpp  ImplementationError.h  IncorrectArgsError.cpp  IncorrectArgsError.h  LengthError.cpp  LengthError.h  NYIError.cpp  NYIError.h  NotErrorError.cpp  NotErrorError.h  RankError.cpp  RankError.h  SyntaxError.cpp  SyntaxError.h  ValueError.cpp  ValueError.h
APL/tokenizer/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
APL/tokenizer/types/: BacktickTok.cpp  BacktickTok.h  BasicLines.cpp  BasicLines.h  BigTok.cpp  BigTok.h  BracketTok.cpp  BracketTok.h  ChrTok.cpp  ChrTok.h  ColonTok.cpp  ColonTok.h  CommentTok.cpp  CommentTok.h  DColonTok.cpp  DColonTok.h  DfnTok.cpp  DfnTok.h  DiamondTok.cpp  DiamondTok.h  ErrTok.cpp  ErrTok.h  LineTok.cpp  LineTok.h  NameTok.cpp  NameTok.h  NumTok.cpp  NumTok.h  OpTok.cpp  OpTok.h  ParenTok.cpp  ParenTok.h  ScopeTok.cpp  ScopeTok.h  SemiTok.cpp  SemiTok.h  SetTok.cpp  SetTok.h  StrTok.cpp  StrTok.h  (+2 more)
APL/types/: APLMap.cpp  APLMap.h  Arr.cpp  Arr.h  BigValue.cpp  BigValue.h  Callable.cpp  Callable.h  Char.cpp  Char.h  Fun.cpp  Fun.h  Null.cpp  Null.h  Num.cpp  Num.h  Obj.cpp  Obj.h  Primitive.cpp  Primitive.h  Settable.cpp  Settable.h  SimpleMap.cpp  SimpleMap.h  StrMap.cpp  StrMap.h  Tokenable.cpp  Tokenable.h  Value.cpp  Value.h  Variable.cpp  Variable.h
APL/types/arrs/: BitArr.cpp  BitArr.h  ChrArr.cpp  ChrArr.h  DoubleArr.cpp  DoubleArr.h  EmptyArr.cpp  EmptyArr.h  HArr.cpp  HArr.h  Rank0Arr.cpp  Rank0Arr.h  Shape1Arr.cpp  Shape1Arr.h  SingleItemArr.cpp  SingleItemArr.h
APL/types/dimensions/: Brackets.cpp  Brackets.h  DervDimDop.cpp  DervDimDop.h  DervDimFn.cpp  DervDimFn.h  DervDimMop.cpp  DervDimMop.h  DimDDop.cpp  DimDDop.h  DimDFn.cpp  DimDFn.h  DimDMop.cpp  DimDMop.h  DimMDop.cpp  DimMDop.h  DimMFn.cpp  DimMFn.h  DimMMop.cpp  DimMMop.h  Pick.cpp  Pick.h
APL/types/functions/: ArrFun.cpp  ArrFun.h  Builtin.cpp  Builtin.h  DerivedDop.cpp  DerivedDop.h  DerivedMop.cpp  DerivedMop.h  Dop.cpp  Dop.h  FunArr.cpp  FunArr.h  Mop.cpp  Mop.h  VarArr.cpp  VarArr.h
APL/types/functions/builtins/: AbstractSet.cpp  AbstractSet.h  DerivedSet.cpp  DerivedSet.h  Quad.cpp  Quad.h  QuoteQuad.cpp  QuoteQuad.h  SetBuiltin.cpp  SetBuiltin.h
APL/types/functions/trains/: Atop.cpp  Atop.h  Fork.cpp  Fork.h
APL/types/functions/userDefined/: Ddop.cpp  Ddop.h  Dfn.cpp  Dfn.h  Dmop.cpp  Dmop.h  UserDefined.cpp  UserDefined.h
APLP5/: APLP5.pde  Mouse.pde  P5.pde  Xs.pde
AndroidIDE/: AndroidIDE.pde  Drawable.pde  GUI.pde  Interpreter.pde  PS.pde  Plane.pde  ROText.pde  Tab.pde  Textarea.pde  Textfield.pde  grapher.pde  stuff.pde
app/APLApp/: APLApp.pde  Key.pde  functionGrapher.pde
benchmark/: CMakeLists.txt  _OLD_CMakeLists.txt  bench_test_1.cpp  bench_test_2.cpp  inst_median_of_3.cpp  inst_median_of_5.cpp  inst_median_of_7.cpp  measurements.hpp  test_sort.cpp  timer.hpp  type_description.hpp
docs/: chars.txt
helpers/: tangible_exception_helper.h  tangible_rectangular_vectors.h  tangible_string_helper.h  tangible_stringbuilder.h
include/apl/: Config.hpp  Exec.java  Helpers.hpp  Indexer.java  Main.java  Scope.java  SimpleIndexer.java  Sys.java  Type.hpp  exec.hpp  type.hpp
include/apl/errors/: APLError.hpp  APLError.java  DomainError.hpp  DomainError.java  ImplementationError.java  IncorrectArgsError.java  LengthError.java  NYIError.java  NotErrorError.java  RankError.java  SyntaxError.java  ValueError.java
include/apl/helpers/: apl_functions.hpp  apl_operators.hpp  ct_error.hpp  simple_functions.hpp  string_literal.hpp  unicode.hpp
include/apl/tokenizer/: Token.hpp  Token.java  Tokenizer.java  token.hpp  token_all.hpp  token_fwd.hpp  tokenizer.hpp
include/apl/tokenizer/tokens/: NameTok.java  TokArr.java  array.hpp  array_def.hpp  backtick.hpp  backtick_def.hpp  base.hpp  basic_lines.hpp  basic_lines_def.hpp  bracket.hpp  bracket_def.hpp  chr.hpp  colon.hpp  comment.hpp  dcolon.hpp  dfn.hpp  dfn_def.hpp  diamond.hpp  err.hpp  line.hpp  line_def.hpp  name.hpp  num.hpp  op.hpp  operator.hpp  paren.hpp  paren_def.hpp  scope.hpp  semi.hpp  set.hpp  tokens.hpp  tokens_def.hpp  tokens_fwd.hpp
include/apl/tokenizer/types/: BacktickTok.hpp  BasicLines.hpp  BasicLines.java  BigTok.java  BracketTok.hpp  BracketTok.java  ChrTok.hpp  ColonTok.hpp  CommentTok.hpp  DColonTok.hpp  DfnTok.hpp  DfnTok.java  DiamondTok.hpp  ErrTok.hpp  LineTok.hpp  LineTok.java  NameTok.hpp  NumTok.hpp  OpTok.hpp  OpTok.java  ParenTok.hpp  ParenTok.java  ScopeTok.hpp  SemiTok.hpp  chr.hpp  (+31 more)
include/apl/types/: APLMap.hpp  APLMap.java  Arr.hpp  Arr.java  BigValue.java  Callable.hpp  Char.hpp  Char.java  Fun.java  Null.hpp  Null.java  Num.hpp  Num.java  Obj.hpp  Obj.java  Obj_def.hpp  Primitive.hpp  Primitive.java  Settable.hpp  SimpleMap.hpp  SimpleMap.java  StrMap.hpp  StrMap.java  Tokenable.hpp  Value.hpp  Value.java  Value_def.hpp  Variable.hpp  __obj.hpp  __obj_fwd.hpp  fun.hpp  num.hpp  obj_all.hpp  types_fwd.hpp  value.hpp  variable.hpp  variable_def.hpp
include/tao/: apl.hpp
include/tao/apl/: accumulate.hpp  adjacent_swap.hpp  algorithm.hpp  concepts.hpp  concepts_undef.hpp  copy.hpp  count.hpp  counter_machine.hpp  counter_machine_check.hpp  find.hpp  for_each.hpp  integers.hpp  iota.hpp  iterator.hpp  numerics.hpp  power.hpp  predicates.hpp  primes.hpp  relation.hpp  remove_range.hpp  reverse.hpp  rotate.hpp  rotate_one.hpp  search.hpp  selection.hpp  shift.hpp  swap.hpp  type_attributes.hpp
src/: main.cpp  static_test.cpp  test_compile_time.cpp  test_constexpr_parser.cpp  test_line.cpp  test_tokenizer.cpp  test_unicode.cpp  test_variant.cpp
src/benchmark/: instrumented.cpp
test/: CMakeLists.txt  tests.cpp
test_old/: CMakeLists.txt  primes.cpp  selection.cpp  shift_right.cpp  statistics.cpp
(+298 files in other folders)
