cmake_minimum_required(VERSION 3.0.0)
project(apl VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(apl
    tangible_main_main.cpp
    APL/SimpleIndexer.cpp
    APL/Exec.cpp
    APL/Indexer.cpp
    APL/Type.cpp
    APL/types/functions/Dop.cpp
    APL/types/functions/FunArr.cpp
    APL/types/functions/VarArr.cpp
    APL/types/functions/DerivedMop.cpp
    APL/types/functions/builtins/SetBuiltin.cpp
    APL/types/functions/builtins/fns/CeilingBuiltin.cpp
    APL/types/functions/builtins/fns/IotaBuiltin.cpp
    APL/types/functions/builtins/fns/GradeUpBuiltin.cpp
    APL/types/functions/builtins/fns/EllipsisBuiltin.cpp
    APL/types/functions/builtins/fns/DivBuiltin.cpp
    APL/types/functions/builtins/fns/MulBuiltin.cpp
    APL/types/functions/builtins/fns/RandBuiltin.cpp
    APL/types/functions/builtins/fns/GTBuiltin.cpp
    APL/types/functions/builtins/fns/FloorBuiltin.cpp
    APL/types/functions/builtins/fns/NorBuiltin.cpp
    APL/types/functions/builtins/fns/EvalBuiltin.cpp
    APL/types/functions/builtins/fns/ReverseBuiltin.cpp
    APL/types/functions/builtins/fns/DShoeBuiltin.cpp
    APL/types/functions/builtins/fns/ReplicateBuiltin.cpp
    APL/types/functions/builtins/fns/DTackBuiltin.cpp
    APL/types/functions/builtins/fns/LShoeBuiltin.cpp
    APL/types/functions/builtins/fns/NEBuiltin.cpp
    APL/types/functions/builtins/fns/TransposeBuiltin.cpp
    APL/types/functions/builtins/fns/MinusBuiltin.cpp
    APL/types/functions/builtins/fns/EQBuiltin.cpp
    APL/types/functions/builtins/fns/RShoeBuiltin.cpp
    APL/types/functions/builtins/fns/EpsilonBuiltin.cpp
    APL/types/functions/builtins/fns/LogBuiltin.cpp
    APL/types/functions/builtins/fns/UShoeBuiltin.cpp
    APL/types/functions/builtins/fns/RhoBuiltin.cpp
    APL/types/functions/builtins/fns/LTBuiltin.cpp
    APL/types/functions/builtins/fns/ExpandBuiltin.cpp
    APL/types/functions/builtins/fns/FormatBuiltin.cpp
    APL/types/functions/builtins/fns/CommaBarBuiltin.cpp
    APL/types/functions/builtins/fns/AndBuiltin.cpp
    APL/types/functions/builtins/fns/FindBuiltin.cpp
    APL/types/functions/builtins/fns/IotaUBBuiltin.cpp
    APL/types/functions/builtins/fns/SquadBuiltin.cpp
    APL/types/functions/builtins/fns/RTackBuiltin.cpp
    APL/types/functions/builtins/fns/UpArrowBuiltin.cpp
    APL/types/functions/builtins/fns/TrigBuiltin.cpp
    APL/types/functions/builtins/fns/MergeBuiltin.cpp
    APL/types/functions/builtins/fns/StileBuiltin.cpp
    APL/types/functions/builtins/fns/GradeDownBuiltin.cpp
    APL/types/functions/builtins/fns/DownArrowBuiltin.cpp
    APL/types/functions/builtins/fns/OrBuiltin.cpp
    APL/types/functions/builtins/fns/LEBuiltin.cpp
    APL/types/functions/builtins/fns/DepthBuiltin.cpp
    APL/types/functions/builtins/fns/StarBuiltin.cpp
    APL/types/functions/builtins/fns/NandBuiltin.cpp
    APL/types/functions/builtins/fns/ExclBuiltin.cpp
    APL/types/functions/builtins/fns/PlusBuiltin.cpp
    APL/types/functions/builtins/fns/RShoeUBBuiltin.cpp
    APL/types/functions/builtins/fns/TallyBuiltin.cpp
    APL/types/functions/builtins/fns/CatBuiltin.cpp
    APL/types/functions/builtins/fns/LShoeStileBuiltin.cpp
    APL/types/functions/builtins/fns/GEBuiltin.cpp
    APL/types/functions/builtins/fns/RootBuiltin.cpp
    APL/types/functions/builtins/fns/UTackBuiltin.cpp
    APL/types/functions/builtins/fns/FlipBuiltin.cpp
    APL/types/functions/builtins/fns/TildeBuiltin.cpp
    APL/types/functions/builtins/fns/SemiUBBuiltin.cpp
    APL/types/functions/builtins/fns/LTackBuiltin.cpp
    APL/types/functions/builtins/dops/DotBuiltin.cpp
    APL/types/functions/builtins/dops/CRepeatBuiltin.cpp
    APL/types/functions/builtins/dops/JotBuiltin.cpp
    APL/types/functions/builtins/dops/JotUBBuiltin.cpp
    APL/types/functions/builtins/dops/RepeatBuiltin.cpp
    APL/types/functions/builtins/dops/AtBuiltin.cpp
    APL/types/functions/builtins/dops/DualBuiltin.cpp
    APL/types/functions/builtins/dops/ObverseBuiltin.cpp
    APL/types/functions/builtins/dops/JotDiaeresisBuiltin.cpp
    APL/types/functions/builtins/dops/OverBuiltin.cpp
    APL/types/functions/builtins/AbstractSet.cpp
    APL/types/functions/builtins/Quad.cpp
    APL/types/functions/builtins/DerivedSet.cpp
    APL/types/functions/builtins/mops/EachRight.cpp
    APL/types/functions/builtins/mops/SelfieBuiltin.cpp
    APL/types/functions/builtins/mops/EachLeft.cpp
    APL/types/functions/builtins/mops/ScanBuiltin.cpp
    APL/types/functions/builtins/mops/KeyBuiltin.cpp
    APL/types/functions/builtins/mops/ReduceBuiltin.cpp
    APL/types/functions/builtins/mops/TableBuiltin.cpp
    APL/types/functions/builtins/mops/ObliqueBuiltin.cpp
    APL/types/functions/builtins/mops/InvertBuiltin.cpp
    APL/types/functions/builtins/mops/EachBuiltin.cpp
    APL/types/functions/builtins/QuoteQuad.cpp
    APL/types/functions/Mop.cpp
    APL/types/functions/ArrFun.cpp
    APL/types/functions/DerivedDop.cpp
    APL/types/functions/Builtin.cpp
    APL/types/functions/trains/Fork.cpp
    APL/types/functions/trains/Atop.cpp
    APL/types/functions/userDefined/Ddop.cpp
    APL/types/functions/userDefined/Dmop.cpp
    APL/types/functions/userDefined/UserDefined.cpp
    APL/types/functions/userDefined/Dfn.cpp
    APL/types/Settable.cpp
    APL/types/Primitive.cpp
    APL/types/arrs/BitArr.cpp
    APL/types/arrs/Rank0Arr.cpp
    APL/types/arrs/HArr.cpp
    APL/types/arrs/ChrArr.cpp
    APL/types/arrs/EmptyArr.cpp
    APL/types/arrs/Shape1Arr.cpp
    APL/types/arrs/SingleItemArr.cpp
    APL/types/arrs/DoubleArr.cpp
    APL/types/Tokenable.cpp
    APL/types/BigValue.cpp
    APL/types/Char.cpp
    APL/types/Fun.cpp
    APL/types/SimpleMap.cpp
    APL/types/Value.cpp
    APL/types/APLMap.cpp
    APL/types/Variable.cpp
    APL/types/Arr.cpp
    APL/types/Obj.cpp
    APL/types/Num.cpp
    APL/types/StrMap.cpp
    APL/types/Null.cpp
    APL/types/Callable.cpp
    APL/types/dimensions/DimMMop.cpp
    APL/types/dimensions/DimMDop.cpp
    APL/types/dimensions/DimDFn.cpp
    APL/types/dimensions/DervDimFn.cpp
    APL/types/dimensions/Brackets.cpp
    APL/types/dimensions/DervDimDop.cpp
    APL/types/dimensions/DimMFn.cpp
    APL/types/dimensions/DimDDop.cpp
    APL/types/dimensions/DervDimMop.cpp
    APL/types/dimensions/Pick.cpp
    APL/types/dimensions/DimDMop.cpp
    APL/Scope.cpp
    APL/tokenizer/Tokenizer.cpp
    APL/tokenizer/Token.cpp
    APL/tokenizer/types/DColonTok.cpp
    APL/tokenizer/types/NumTok.cpp
    APL/tokenizer/types/BigTok.cpp
    APL/tokenizer/types/NameTok.cpp
    APL/tokenizer/types/SetTok.cpp
    APL/tokenizer/types/SemiTok.cpp
    APL/tokenizer/types/LineTok.cpp
    APL/tokenizer/types/DfnTok.cpp
    APL/tokenizer/types/BracketTok.cpp
    APL/tokenizer/types/ChrTok.cpp
    APL/tokenizer/types/OpTok.cpp
    APL/tokenizer/types/ErrTok.cpp
    APL/tokenizer/types/DiamondTok.cpp
    APL/tokenizer/types/BasicLines.cpp
    APL/tokenizer/types/ParenTok.cpp
    APL/tokenizer/types/BacktickTok.cpp
    APL/tokenizer/types/CommentTok.cpp
    APL/tokenizer/types/TokArr.cpp
    APL/tokenizer/types/ColonTok.cpp
    APL/tokenizer/types/StrTok.cpp
    APL/tokenizer/types/ScopeTok.cpp
    APL/Sys.cpp
    APL/Main.cpp
    APL/errors/ValueError.cpp
    APL/errors/LengthError.cpp
    APL/errors/IncorrectArgsError.cpp
    APL/errors/SyntaxError.cpp
    APL/errors/NYIError.cpp
    APL/errors/DomainError.cpp
    APL/errors/ImplementationError.cpp
    APL/errors/RankError.cpp
    APL/errors/APLError.cpp
    APL/errors/NotErrorError.cpp
)

# target_include_directories(${PROJECT_NAME} PUBLIC
#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/mylib>
#   $<INSTALL_INTERFACE:include/mylib>  # <prefix>/include/mylib
# )

target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:include/mylib>  # <prefix>/include/mylib
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
